fixes horizontal scroll bar from showing

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,7 @@
 .main {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
     min-width: 100%;
     justify-content: center;
     align-items: center;
@@ -16,6 +16,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     max-height: 900px;
+    width: 100%;
 }
 
 .fullPageContainer {
@@ -23,7 +24,7 @@
     flex-direction: column;;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
